--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 html, body {
     height: 100%;
     min-height: 100vh;
-    overflow: hidden; /* Prevents any unwanted scrolling */
+    overflow: hidden;
 }
 
 body {
+    font-family: 'Source Code Pro', monospace;
     background: linear-gradient(to bottom, red 50%, white 50%);
     margin: 0;
     display: flex;
@@ -29,7 +30,7 @@ main {
     width: 480px;  
     height: 480px;  
     border-radius: 50%;
-    padding: 5px;  
+    padding: 15px;  
     position: relative;
     z-index: 2;
     border: 15px solid black;
@@ -69,3 +70,19 @@ div {
     text-align: center;
     padding: 10px;
 }
+
+#randPokemon {
+    width: 150px;
+    height: 150px;
+    font-size: 40px;
+    border-radius: 50%;
+    padding: 50px;
+    margin: 10px;  
+    position: relative;
+    z-index: 2;
+    border: 5px solid black;
+    display: flex; 
+    align-items: center;  
+    justify-content: center;
+}
+
